--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </table>
     
 <h2 id="pictures">照片</h2>
-<img width=400 src="images/枪与玫瑰乐队现场.png" alt="枪与玫瑰乐队现场">
-<img width=400 src="images/枪与玫瑰标志.png" alt="枪与玫瑰标志">
+<img width=400 src="images/枪与玫瑰乐队现场-min.png" alt="枪与玫瑰乐队现场">
+<img width=400 src="images/枪与玫瑰标志-min.png" alt="枪与玫瑰标志">
 </body>
 </html>
