--- a/index.html
+++ b/index.html
@@ -210,7 +210,11 @@
         </table>
     
 <h2 id="pictures">照片</h2>
-<img width=400 src="images/枪与玫瑰乐队现场-min.png" alt="枪与玫瑰乐队现场">
-<img width=400 src="images/枪与玫瑰标志-min.png" alt="枪与玫瑰标志">
+<div>
+<a href="images/枪与玫瑰乐队现场-min.png"><img width=400 src="images/枪与玫瑰乐队现场-min.png" alt="枪与玫瑰乐队现场"></a>
+</div>
+<div>
+<a href="images/枪与玫瑰乐队现场-min.png"><img width=400 src="images/枪与玫瑰标志-min.png" alt="枪与玫瑰标志"></a>
+</div>
 </body>
 </html>
